feat: add header

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,13 +1,9 @@
 :root {
   // base
   --font-family: 'Poppins', sans-serif;
-  --title-fonts: 'Bayon', sans-serif;
+  --title-font: 'Bayon', sans-serif;
 
     // colors
-  --light-color: #F0F0F0;
-  --dark-color: #352A2A;
-  --bg-color: #F6F5F3;
-  --gray-color: #757070;
 }
 
 
