feat: add promo section

--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -14,6 +14,7 @@
       font-family: var(--title-font);
       font-weight: 400;
       color: #2C3638;
+      font-size: 20px;
     }
   }
   &__btn {
