--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -14,11 +14,11 @@ body {
   font-family: var(--font-family, sans-serif);
   font-weight: 400;
   -webkit-text-size-adjust: 100%;
-  font-size: 18px;
-  line-height: 27px;
+  font-size: 16px;
+  line-height: 24px;
   overflow-x: hidden;
   min-width: 320px;
-  background-color: var(--bg-color);
+  color: rgba(#2C3638,0.7);
   background: url('../images/main-bg.webp');
 }
 img {
