--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -35,7 +35,7 @@ a {
   max-width: 1400px;
 }
 .container-fluid {
-  max-width: 1920px;
+  max-width: 1620px;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -65,19 +65,19 @@ a {
   cursor: pointer;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
+// .wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100%;
+// }
 
-.main {
-  flex: 1 0 auto;
-  height: 100px;
-}
-.footer {
-  flex: 0 0 auto;
-}
+// .main {
+//   flex: 1 0 auto;
+//   height: 100px;
+// }
+// .footer {
+//   flex: 0 0 auto;
+// }
 
 .block-name {
   position: absolute;
