--- a/src/assets/scss/blocks/_advantage.scss
+++ b/src/assets/scss/blocks/_advantage.scss
@@ -31,3 +31,48 @@
     margin-bottom: 13px;
   }
 }
+
+
+@media (max-width: 1400px) {
+  .advantages__inner {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+  .advantages__title {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+  }
+  .advantages__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .advantages__items {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  .advantages__content {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .advantages {
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .advantages__title {
+    font-size: 40px;
+  }
+  .advantages__items {
+    justify-content: space-around;
+    gap: 20px;
+  }
+}
