--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -101,3 +101,68 @@
     color: #F6F5F3;
   }
 }
+
+@media (max-width: 1200px) {
+  .footer__inner {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__contacts {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  .footer__nav {
+    display: none;
+  }
+}
+
+@media (max-width: 490px) {
+  .footer {
+    padding-top: 0;
+  }
+  .footer__subtitle {
+    font-size: 70px;
+    line-height: 95px;
+  }
+  .footer__title {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .footer__text {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  .footer__form-input {
+    width: 200px;
+  }
+  .footer__form-btn {
+    width: 120px;
+    height: 50px;
+  }
+  .footer__contacts-title {
+  margin-bottom: 0;
+  }
+  .footer__contacts {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 380px) {
+  .footer__form-input {
+    width: 160px;
+  }
+  .footer__form-btn {
+    width: 100px;
+    height: 40px;
+  }
+  .footer__contacts-title {
+    font-size: 20px;
+  }
+  .footer__contacts-address, 
+  .footer__contacts-phone {
+    font-size: 12px;
+  }
+}
