--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -114,8 +114,12 @@
 }
 
 @media (max-width: 992px) {
-  .footer__nav {
+  .footer__logo {
     display: none;
+  }
+  .footer__nav {
+    justify-content: center;
+    padding: 0;
   }
 }
 
@@ -147,6 +151,9 @@
   }
   .footer__contacts {
     gap: 20px;
+  }
+  .footer__nav-list {
+    gap: 30px;
   }
 }
 
