feat: add hover effects

--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -52,6 +52,11 @@
     font-size: 20px;
     line-height: 36px;
     color: #FFFFFF;
+    transition: all 0.5s;
+    &:hover {
+      background-color: #F6F5F3;
+      color: #2C3638;
+    }
   }
   &__contacts {
     margin-left: 210px;
@@ -72,6 +77,10 @@
     font-size: 18px;
     line-height: 33px;
     color: #F6F5F3;
+    transition: all 0.5s;
+    &:hover {
+      color: #df923a;
+    }
   }
   &__contacts-address {
     max-width: 207px;
@@ -99,6 +108,13 @@
     font-size: 20px;
     line-height: 36px;
     color: #F6F5F3;
+    transition: all 0.5s;
+    &:hover {
+      color: #df923a;
+    }
+  }
+  &__logo {
+    color: #ffffff;
   }
 }
 
