--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -15,6 +15,10 @@
       font-weight: 400;
       color: #2C3638;
       font-size: 20px;
+      transition: all 0.5s;
+      &:hover {
+        color: #df923a;
+      }
     }
   }
   &__btn {
@@ -28,9 +32,31 @@
     color: (#ffffff);
     font-family: 'Bayon';
     font-weight: 400;
+    transition: all 0.5s;
+    &:hover {
+      background-color: #df923a;
+    }
   }
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-family: var(--title-font);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 36px;
+  color: #2C3638;
+  transition: all 0.5s;
+  &:hover {
+    color: #df923a;
+    .logo-img {
+      transition: all 0.5s;
+      rotate: 50deg;
+    }
+  }
+}
 .burger {
   display: none;
   flex-direction: column;
