--- a/src/assets/scss/blocks/_seed.scss
+++ b/src/assets/scss/blocks/_seed.scss
@@ -41,6 +41,10 @@
     font-size: 20px;
     line-height: 36px;
     color: #FFFFFF;
+    transition: all 0.5s;
+    &:hover {
+      background-color: #2C3638;
+    }
   }
 }
 
@@ -82,6 +86,7 @@
   .seed__btn {
     display: block;
     margin: 25px auto 0;
+
   }
   .seed__content-inner {
     margin-top: 30px;
