--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,13 +3,12 @@
 @import "base/fonts";
 @import "base/variables";
 @import "base/global";
-
+@import "base/animation";
 //blocks
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/promo";
 @import "blocks/advantage";
 @import "blocks/deal";
-@import "blocks/counter";
 @import "blocks/seed";
 @import "blocks/footer";
