--- a/src/assets/scss/blocks/_advantage.scss
+++ b/src/assets/scss/blocks/_advantage.scss
@@ -26,6 +26,10 @@
   }
   &__item {
     width: 100px;
+    transition: all 0.5s;
+    &:hover {
+      scale: 1.1;
+    }
   }
   &__text {
     margin-bottom: 13px;
