--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -90,3 +90,18 @@ a {
   font-size: 300px;
   color: rgba(#757070, 0.03);
 }
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  opacity: 0.7;
+  z-index: 10;
+  &_active {
+    display: block;
+  }
+}
